# axlauncher

./: .licenserc.yaml  Cargo.toml  NOTICE  README.md
.github/workflows/: ci.yml  license_check.yml
src/: main.rs  state.rs  theme.rs
src/common/: app_ui.rs  constants.rs  mod.rs
src/common/app_button/: mod.rs
src/common/app_input/: mod.rs
src/common/app_text/: mod.rs
src/common/sidebar/: mod.rs
src/module/: mod.rs
src/module/account/: entity.rs  mod.rs  repository.rs
src/module/config/: mod.rs  model.rs  repository.rs
src/module/launcher/: mod.rs  model.rs  repository.rs  service.rs
src/module/mojang/: entity.rs  mod.rs  model.rs  repository.rs
src/ui/: mod.rs
src/ui/accounts/: mod.rs
src/ui/home/: mod.rs
src/ui/settings/: mod.rs
