[package]
name = "axlauncher"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
confy = "2.0.0"
flate2 = "1.1.9"
futures-util = "0.3.31"
iced = { version = "0.14.0", features = ["image", "canvas", "tokio"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tar = "0.4.44"
tokio = { version = "1.49.0", features = ["fs"] }
